# local-agent-factory

./: .env.example  .gitignore  README.md  Taskfile.yml  docker-compose.yml  z_image_api.json  z_image_turbo_workflow.json
agent-ui/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  agentos.py  pyproject.toml
backend/agents/: __init__.py
backend/agents/basic_agent/: __init__.py  agent.py  builder.py
backend/agents/basic_agent/prompts/: data_analyst.py
backend/agents/deep_research/: __init__.py  agents.py  team.py
backend/data/: .gitignore
backend/tools/: __init__.py  knowledge_tool.py
backend/tools/mcp_tools/: __init__.py  dynamic_mcp.py  mcp_client.py
backend/utils/: __init__.py  database.py  models.py  readers.py  storage.py
database/: README.md
database/migrations/: schema.surql
database/seeds/: data.surql
mcp/: .dockerignore  .env.example  Dockerfile.chart  Dockerfile.comfy  README.md  pyproject.toml
mcp/chart_generator/: __init__.py  charts.py  server.py  storage.py  themes.py
mcp/comfy_image/: __init__.py  comfy_client.py  server.py  storage.py
mcp/comfy_image/workflows/: z_image_api.json
mcp/data/generated_pdfs/: .gitignore
mcp/pdf_generator/: __init__.py  converter.py  server.py  storage.py  styles.py  templates.py
mcp/shared/: __init__.py  context.py
models/: README.md
models/comfy/scripts/: doctor.ps1  doctor.sh  install.ps1  install.sh  pull_models.ps1  pull_models.sh  start.ps1  start.sh  stop.ps1  stop.sh  uninstall.ps1  uninstall.sh
(+10 files in other folders)
