[project]
name = "local-agent-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.3.12",
    "aiofiles>=25.1.0",
    "ddgs>=9.9.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.4",
    "httpx>=0.28.0",
    "jupyterlab>=4.5.0",
    "mcp>=1.0.0",
    "nest-asyncio>=1.6.0",
    "ollama>=0.6.1",
    "openai>=2.11.0",
    "pypdf>=6.4.1",
    "python-docx>=1.2.0",
    "sqlalchemy>=2.0.45",
    "surrealdb>=1.0.7",
    "yfinance>=0.2.66",
]
