[project]
name = "mcp-tools"
version = "0.1.0"
description = "MCP Servers for image generation, chart generation, and PDF generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "numpy>=1.26.0",
]

[project.scripts]
comfy-image-mcp = "comfy_image.server:main"
chart-generator-mcp = "chart_generator.server:main"
pdf-generator-mcp = "pdf_generator.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["comfy_image", "chart_generator", "pdf_generator"]
